--- a/l02/list.html
+++ b/l02/list.html
@@ -9,6 +9,56 @@
 <body>
 	
 	<!-- Danh sách -->
-	
+	<!-- ol (order list) - li (list item)  Danh sách có thứ tự-->
+	<ol>
+		<li> Lorem ipsum dolor
+			<ol type="a">
+				<li>Lorem ipsum dolor sit amet</li>
+				<li>Lorem ipsum dolor sit amet</li>
+				<li>Lorem ipsum dolor sit amet</li>
+				<li>Lorem ipsum dolor sit amet</li>
+				<li>Lorem ipsum dolor sit amet</li>
+			</ol>
+		</li>
+		<li>Lorem ipsum dolor sit amet</li>
+		<li>Lorem ipsum dolor sit amet</li>
+		<li>Lorem ipsum dolor sit amet</li>
+		<li>Lorem ipsum dolor sit amet</li>
+		<li>Lorem ipsum dolor sit amet</li>
+	</ol>
+
+	<!-- ul (unorder list) - li (list item) Danh sách không có thứ tự -->
+	<ul>
+		<li>Lorem ipsum dolor sit amet
+			<ul>
+				<li>Lorem ipsum dolor sit amet</li>
+				<li>Lorem ipsum dolor sit amet</li>
+				<li>Lorem ipsum dolor sit amet</li>
+				<li>Lorem ipsum dolor sit amet</li>
+			</ul>
+		</li>
+		<li>Lorem ipsum dolor sit amet</li>
+		<li>Lorem ipsum dolor sit amet</li>
+		<li>Lorem ipsum dolor sit amet</li>
+		<li>Lorem ipsum dolor sit amet</li>
+		<li>Lorem ipsum dolor sit amet</li>
+	</ul>
+
+	<!-- dl (description list) - dd (detail) - dt (term) danh sách mô tả-->
+	Lorem ipsum dolor sit amet
+	<dl>
+		
+		<dd>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. </dd>
+		<dt><b><i>Lorem ipsum dolor sit amet</i></b></dt>
+		<dd>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</dd>
+	</dl>
 </body>
 </html>
