--- a/l03/fb-form.html
+++ b/l03/fb-form.html
@@ -15,7 +15,7 @@
 		<br>
 		Ngày sinh 
 		<br>
-		<select name="" id="">
+		<select name="" id="" multiple>
 			<option value="">01</option>
 			<option value="">02</option>
 			<option value="">03</option>
@@ -34,7 +34,7 @@
 			<option value="">Tháng 4</option>
 			<option value="">Tháng 5</option>
 			<option value="">Tháng 6</option>
-			<option value="">Tháng 7</option>
+			<option value="" selected>Tháng 7</option>
 			<option value="">Tháng 8</option>
 			<option value="">Tháng 9</option>
 			<option value="">Tháng 10</option>
