--- a/l09/lamsao.html
+++ b/l09/lamsao.html
@@ -22,7 +22,18 @@
 				</button>
 			</div><!-- search bar -->
 			<ul class="favor">
-				
+				<li>
+					<a href="#" title="">
+						<i class="fa fa-user-o fa-3x"></i>
+						Đăng nhập
+					</a>
+				</li>
+				<li>
+					<a href="#" title="">
+						<i class="fa fa-heart-o fa-3x"></i>
+						Yêu thích
+					</a>
+				</li>
 			</ul>
 		</section>
 	</header><!-- /header -->
