update code navigation

--- a/l09/lamsao.html
+++ b/l09/lamsao.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<header >
-		<section class="container">
+		<section class="container clearfix">
 			<div class="logo">
 				<a href="#" title="">
 					<img src="public/images/logo.png" alt="">
@@ -34,8 +34,98 @@
 						Yêu thích
 					</a>
 				</li>
-			</ul>
+			</ul><!-- /favor -->
 		</section>
+		<nav>
+			<ul class="container">
+				<li>
+					<a href="" title=""> 
+						<i class="fa fa-home" aria-hidden="true"></i>
+						Trang chủ 
+					</a>
+					<ul class="dropdown">
+						<li>
+							<a href="" title=""> 
+								<i class="fa fa-home" aria-hidden="true"></i>
+								Trang chủ 1 
+							</a>
+						</li>
+						<li>
+							<a href="" title=""> 
+								<i class="fa fa-home" aria-hidden="true"></i>
+								Trang chủ 2
+							</a>
+						</li>
+						<li>
+							<a href="" title=""> 
+								<i class="fa fa-home" aria-hidden="true"></i>
+								Trang chủ 3 
+							</a>
+							<ul class="dropdown">
+								<li>
+									<a href="" title=""> 
+										<i class="fa fa-home" aria-hidden="true"></i>
+										Trang chủ 3.1
+									</a>
+								</li>
+								<li>
+									<a href="" title=""> 
+										<i class="fa fa-home" aria-hidden="true"></i>
+										Trang chủ 3.2
+									</a>
+								</li>
+								<li>
+									<a href="" title=""> 
+										<i class="fa fa-home" aria-hidden="true"></i>
+										Trang chủ 3.3 
+									</a>
+								</li>
+							</ul>
+						</li>
+					</ul>
+				</li>
+				<li>
+					<a href="" title="">
+					<i class="fa fa-plus" aria-hidden="true"></i>
+					Danh mục</a>
+					<ul class="dropdown">
+						<li>
+							<a href="" title=""> 
+								<i class="fa fa-home" aria-hidden="true"></i>
+								Danh mục 1 
+							</a>
+						</li>
+						<li>
+							<a href="" title=""> 
+								<i class="fa fa-home" aria-hidden="true"></i>
+								Danh mục 2
+							</a>
+						</li>
+						<li>
+							<a href="" title=""> 
+								<i class="fa fa-home" aria-hidden="true"></i>
+								Danh mục 3 
+							</a>
+						</li>
+					</ul>
+				</li>
+				<li class="mega-menu">
+					<a href="" title="">
+						<i class="fa fa-bath" aria-hidden="true"></i>
+						Giới thiệu 
+					</a>
+					<div class="mega-content">
+						
+					</div>
+				</li>
+				<li>
+					<a href="" title="">
+						<i class="fa fa-address-card-o" aria-hidden="true"></i>
+						Liên hệ
+					</a>
+				</li>
+			</ul>
+		</nav>
 	</header><!-- /header -->
 </body>
 </html>
