update detail mega menu

--- a/l09/lamsao.html
+++ b/l09/lamsao.html
@@ -115,7 +115,30 @@
 						Giới thiệu 
 					</a>
 					<div class="mega-content">
-						
+						<div class="mega-unit">
+							<a href="#" title="" class="thumbnail">
+								<img src="public/images/den-long.jpg" alt="">
+								<p>Tự làm lồng đèn Trung thu từ lọ thủy tinh hình trụ đẹp mê hồn</p>
+							</a>
+						</div>
+						<div class="mega-unit">
+							<a href="#" title="" class="thumbnail">
+								<img src="public/images/den-trung-thu-1.png" alt="">
+								<p>Lon sữa uống xong học cách làm lồng đèn đẹp chơi Trung thu</p>
+							</a>
+						</div>
+						<div class="mega-unit">
+							<a href="#" title="" class="thumbnail">
+								<img src="public/images/hop-qua-1.jpg" alt="">
+								<p>Làm đèn lồng quả dứa cho bé múa đêm Rằm Trung thu</p>
+							</a>
+						</div>
+						<div class="mega-unit">
+							<a href="#" title="" class="thumbnail">
+								<img src="public/images/quat-giay-1.jpg" alt="">
+								<p>Cách làm hộp quà đựng bánh Trung thu ai nhìn cũng "lác mắt"</p>
+							</a>
+						</div>
 					</div>
 				</li>
 				<li>
