--- a/l10/lamsao.html
+++ b/l10/lamsao.html
@@ -150,5 +150,69 @@
 			</ul>
 		</nav>
 	</header><!-- /header -->
+	<main>
+		<section class="hot-news container">
+			<div class="top-new">
+				<div class="major">
+					<a href="#">
+						<img src="public/images/major-1.jpg" alt="">
+					</a>
+					<div class="new-title">
+						<p>
+							<a href="#">Cách làm bánh nướng nhân hạt dẻ cho Trung thu vui vẻ</a>
+						</p>
+						<span>
+							<i class="fa fa-eye"></i>
+							1.602 lượt xem
+						</span>
+					</div>
+				</div>
+				<div class="aside-news">
+					<div class="aside-unit">
+						<a href="#">
+							<img src="public/images/xuc-xac.jpg" alt="">
+						</a>
+						<div class="new-title">
+							<p>
+								<a href="#">Trung thu, mẹ học cách làm xúc xắc cho bé chơi tẹt ga</a>
+							</p>
+						</div>
+					</div>
+					<div class="aside-unit">
+						<a href="#">
+							<img src="public/images/trung-muoi.jpg" alt="">
+						</a>
+						<div class="new-title">
+							<p>
+								<a href="#">Cách khử mùi tanh của trứng muối cho bánh Trung thu ngon hơn</a>
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="bottom-news">
+				<div class="aside-unit">
+					<a href="#">
+						<img src="public/images/vong-hoa.jpg" alt="">
+					</a>
+					<div class="new-title">
+						<p>
+							<a href="#">Gợi ý mix đồ để nổi bật trên phố đêm Trung thu</a>
+						</p>
+					</div>
+				</div>
+				<div class="aside-unit">
+					<a href="#">
+						<img src="public/images/mix-do.jpg" alt="">
+					</a>
+					<div class="new-title">
+						<p>
+							<a href="#">Khéo tay kết vòng hoa đội đầu cho bé chơi Trung thu</a>
+						</p>
+					</div>
+				</div>
+			</div>
+		</section>
+	</main><!-- /main content -->
 </body>
 </html>
