--- a/l11/lamsao.html
+++ b/l11/lamsao.html
@@ -213,7 +213,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="category container">
+		<section class="category container clearfix">
 			<h3 class="cate-title am-thuc">
 				<span>Ẩm thực</span>
 			</h3>
@@ -273,5 +273,8 @@
 			</ul>
 		</section>
 	</main><!-- /main content -->
+	<div class="go-to-top">
+		<i class="fa fa-chevron-up" aria-hidden="true"></i>
+	</div>
 </body>
 </html>
