--- a/l18/array.html
+++ b/l18/array.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	
-
+	<script type="text/javascript" src="main.js"></script>
 	<script type="text/javascript">
 		// 9. cho 1 mảng có 100 phần tử random
 		// tìm các bộ 3 phần tử có độ dài hình thành tam giác và hiển thị chu vi, diện 
@@ -24,23 +24,8 @@
 				if(i == j) continue;
 				
 				for (var k = 0; k < arr.length; k++) {
-					debugger;
 					if(i == k || j == k) continue;
-					if(arr[i]+arr[j] > arr[k] 
-						&& arr[i]+arr[k]>arr[j] 
-						&& arr[j]+arr[k] > arr[i]){
-						var cv = arr[i]+arr[k]+arr[j];
-						var p = cv/2;
-						var s = Math.sqrt(p*(p-arr[i])*(p-arr[j])*(p-arr[k]));
-						document.write(`
-							<fieldset>
-							<legend>Các vị trí index : ${i} - ${j} - ${k}</legend>
-							<br>
-							với độ dài ${arr[i]} - ${arr[j]} - ${arr[k]} có hình thành tam giác<br>
-							chu vi: ${cv}<br>
-							diện tích: ${s}
-							</fieldset>`);
-					}
+					checkTamgiac(arr[i], arr[j], arr[k]);
 				}
 			}
 		}
