--- a/l30/index.html
+++ b/l30/index.html
@@ -7,36 +7,14 @@
 	<link rel="stylesheet" href="">
 </head>
 <body>
-	
+	<input type="text" id="ipText" value="" placeholder="">
+	<button onclick="lib.checkVowel()">Submit</button>
 
-	<!-- <script src="public/js/lib.js" type="text/javascript"></script> -->
-	<!-- <script src="public/js/main.js" type="text/javascript"></script> -->
+	<script src="public/js/lib.js" type="text/javascript"></script>
 	<script type="text/javascript">
-		var thanh = {
-			name: 'thanh',
-			age: 25,
-			hometown: 'ha nam',
-			weight: 50,
-			an: function(){
-				this.weight += 1;
-				console.log('an xong roi');
-			}
-		};
-
-
-		var huy = {
-			name: 'doan van huy',
-			age: 50,
-			hometown: 'ca mau',
-			weight: 20,
-			an: function(){
-				this.weight += 1;
-				console.log('an xong roi');
-			}
-		};
-
-		console.log(thanh);
-		console.log(huy);
+		// b1: tim so luong ky tu co trong the input
+		// b2: Kiem tra xem co xuat hien ky tu t3h trong chuoi hay khong
+		// b2: Kiem tra xem co bao nhieu ky tu trong chuoi la ky tu nguyen am
 	</script>
 </body>
 </html>
