--- a/l31/index.html
+++ b/l31/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<input type="text" id="ipText" value="" placeholder="">
-	<button onclick="lib.removeWhiteSpace()">Submit</button>
+	<button onclick="lib.b5()">Submit</button>
 
 	<script src="public/js/lib.js" type="text/javascript"></script>
 	<script type="text/javascript">
@@ -16,6 +16,8 @@
 		// b2: Kiem tra xem co xuat hien ky tu t3h trong chuoi hay khong
 		// b3: Kiem tra xem co bao nhieu ky tu trong chuoi la ky tu nguyen am
 		// b4: xoá toàn bộ khoảng trắng trong chuỗi (yêu cầu sử dụng hàm search và slice trong js)
+		// b5: value2 = 1 prompt de lay chuoi, sau do kiem tra xem chuoi do con ton tai trong gia tri cua the input (value1) hay khong neu co ton tai 
+		// xoa value2 trong value1
 	</script>
 </body>
 </html>
