--- a/l32/index.html
+++ b/l32/index.html
@@ -8,13 +8,17 @@
 </head>
 <body>
 	<input type="text" id="ipText" value="" placeholder="">
-	<button onclick="lib.checkVowel()">Submit</button>
+	<button onclick="lib.b5()">Submit</button>
 
 	<script src="public/js/lib.js" type="text/javascript"></script>
 	<script type="text/javascript">
 		// b1: tim so luong ky tu co trong the input
 		// b2: Kiem tra xem co xuat hien ky tu t3h trong chuoi hay khong
-		// b2: Kiem tra xem co bao nhieu ky tu trong chuoi la ky tu nguyen am
+		// b3: Kiem tra xem co bao nhieu ky tu trong chuoi la ky tu nguyen am
+		// b4: xoá toàn bộ khoảng trắng trong chuỗi (yêu cầu sử dụng hàm search và slice trong js)
+		// b5: value2 = 1 prompt de lay chuoi, sau do kiem tra xem chuoi do con ton tai trong gia tri cua the input (value1) hay khong neu co ton tai 
+		// xoa value2 trong value1
+		// b6: loai bo toan bo khoang trang trong chuoi
 	</script>
 </body>
 </html>
