--- a/l37/table.html
+++ b/l37/table.html
@@ -78,6 +78,7 @@
 				<tr>
 					<th>#</th>
 					<th>Họ tên</th>
+					<th width="120">Ảnh</th>
 					<th>Lớp</th>
 					<th>Điểm</th>
 					<th>
@@ -89,6 +90,9 @@
 				<tr>
 					<td>1</td>
 					<td>Nguyễn Văn A</td>
+					<td>
+						<img src="public/images/img-1.jpeg" class="img-responsive">
+					</td>
 					<td>K31b2</td>
 					<td>6</td>
 					<td>
@@ -99,6 +103,9 @@
 				<tr>
 					<td>1</td>
 					<td>Nguyễn Văn A</td>
+					<td>
+						<img src="public/images/img-1.jpeg" alt="" class="img-responsive">
+					</td>
 					<td>K31b2</td>
 					<td>6</td>
 					<td>
@@ -109,10 +116,13 @@
 				<tr>
 					<td>1</td>
 					<td>Nguyễn Văn A</td>
+					<td>
+						<img src="public/images/img-1.jpeg" class="img-responsive">
+					</td>
 					<td>K31b2</td>
 					<td>6</td>
 					<td>
-						<button class="btn btn-info">Sửa</button>
+						<button class="btn btn-info btn-block">Sửa</button>
 						<button class="btn btn-danger">Xoá</button>
 					</td>
 				</tr>
