--- a/l40/bt1.html
+++ b/l40/bt1.html
@@ -92,13 +92,17 @@
 					<input type="text" name="attrValue[]" value="" placeholder="Attribute value" class="form-control">
 				</td>
 				<td class="text-center">
-					<button class="btn btn-sm btn-danger">
+					<button class="btn btn-sm btn-danger" onclick="removeAttr(this)">
 						<span class="glyphicon glyphicon-remove"></span>
 					</button>
 				</td>
 			</tr>`;
 			$('tbody').append(tr);
 		});
+
+		function removeAttr(btn){
+			console.log(btn);
+		};
 	</script>
 </body>
 </html>
